--- a/build.gradle
+++ b/build.gradle
@@ -53,3 +53,9 @@ publishing {
     }
 }
 
+signing {
+    useInMemoryPgpKeys(findProperty("signing.keyId") ?: System.getenv("SIGNING_KEY_ID"),
+            findProperty("signing.secretKeyRingFile") ?: System.getenv("SIGNING_SECRET_KEY_RING_FILE"),
+            findProperty("signing.password") ?: System.getenv("SIGNING_PASSWORD"))
+    sign publishing.publications.mavenJava
+}
