--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,24 +17,12 @@ jobs:
           distribution: 'adopt'
           java-version: '17'
 
-      - name: Cache Gradle packages
-        uses: actions/cache@v2
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
 
       - name: Import GPG Key
         run: |
-          echo "${{ secrets.GPG_PRIVATE_KEY }}" | Out-File -Encoding utf8 "private-key.asc.base64"
-          Get-Content "private-key.asc.base64" | base64 -d | Out-File -Encoding utf8 "private-key.asc"
-          gpg --import --batch --yes "private-key.asc"
+          echo "${{ secrets.SIGNING_SECRET_KEY_RING_FILE }}" | base64 --decode | gpg --import --batch --yes
 
       - name: Publish package
         run: ./gradlew publish
