--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,26 +9,23 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
-          distribution: 'adopt'
+          distribution: 'temurin' # As good as any other, see: https://github.com/actions/setup-java#supported-distributions
+          java-package: 'jdk'
           java-version: '17'
 
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
 
-      - name: Import GPG Key
-        run: |
-          echo "${{ secrets.SIGNING_SECRET_KEY_RING_FILE }}" | base64 --decode | gpg --import --batch --yes
-
-      - name: Publish package
-        run: ./gradlew publish
+      - name: Publish to Maven Central
+        run: ./gradlew publish --info
         env:
-          OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-          OSSRH_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
+          SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
+          SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
           SIGNING_KEY_ID: ${{ secrets.SIGNING_KEY_ID }}
           SIGNING_SECRET_KEY_RING_FILE: ${{ secrets.SIGNING_SECRET_KEY_RING_FILE }}
           SIGNING_PASSWORD: ${{ secrets.SIGNING_PASSWORD }}
