--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'signing'
 }
 
-group = 'kr.revfactory.utils'
+group = 'io.github.revfactory'
 version = '0.1.0'
 
 repositories {
@@ -50,12 +50,23 @@ publishing {
                 }
             }
         }
+        repositories {
+            maven {
+                url 'https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/'
+                credentials {
+                    username project.findProperty("sonatypeUsername") ?: System.getenv("SONATYPE_USERNAME")
+                    password project.findProperty("sonatypePassword") ?: System.getenv("SONATYPE_PASSWORD")
+                }
+            }
+        }
     }
 }
 
 signing {
-    useInMemoryPgpKeys(findProperty("signing.keyId") ?: System.getenv("SIGNING_KEY_ID"),
-            findProperty("signing.secretKeyRingFile") ?: System.getenv("SIGNING_SECRET_KEY_RING_FILE"),
-            findProperty("signing.password") ?: System.getenv("SIGNING_PASSWORD"))
-    sign publishing.publications.mavenJava
+    useGpgCmd()
+    useInMemoryPgpKeys(findProperty("signing.keyId"), findProperty("signing.secretKeyRingFile"), findProperty("signing.password"))
+}
+
+tasks.withType(Sign) {
+    enabled = !project.version.endsWith('SNAPSHOT')
 }
