--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -22,14 +22,13 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Import GPG key
-        run: |
-          mkdir -p $HOME/.gnupg
-          echo "${{ secrets.SIGNING_SECRET_KEY_RING_FILE }}" | base64 --decode | gpg --import --batch --yes --no-tty
-        env:
-          SIGNING_SECRET_KEY_RING_FILE: ${{ secrets.SIGNING_SECRET_KEY_RING_FILE_BASE64 }}
+        uses: crazy-max/ghaction-import-gpg@v6
+        with:
+          gpg_private_key: ${{ secrets.SIGNING_SECRET_KEY_RING_FILE }}
+          passphrase: ${{ secrets.SIGNING_PASSWORD }}
 
-      - name: List GPG keys
-        run: gpg --list-secret-keys
+      - name: List keys
+        run: gpg -k
 
       - name: Publish to Maven Central
         run: ./gradlew publish --info
@@ -37,5 +36,5 @@ jobs:
           SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
           SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
           SIGNING_KEY_ID: ${{ secrets.SIGNING_KEY_ID }}
-          SIGNING_SECRET_KEY_RING_FILE: ${{ github.workspace }}/secring.gpg
+          SIGNING_SECRET_KEY_RING_FILE: ${{ secrets.SIGNING_SECRET_KEY_RING_FILE }}
           SIGNING_PASSWORD: ${{ secrets.SIGNING_PASSWORD }}
