--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,18 +17,11 @@ jobs:
           distribution: 'temurin' # As good as any other, see: https://github.com/actions/setup-java#supported-distributions
           java-package: 'jdk'
           java-version: '17'
+          gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
+          gpg-passphrase: GPG_PASSPHRASE
 
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
-
-      - name: Import GPG key
-        uses: crazy-max/ghaction-import-gpg@v6
-        with:
-          gpg_private_key: ${{ secrets.SIGNING_SECRET_KEY_RING_FILE }}
-          passphrase: ${{ secrets.SIGNING_PASSWORD }}
-
-      - name: List keys
-        run: gpg -k
 
       - name: Publish to Maven Central
         run: ./gradlew publish --info
