--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,25 +9,30 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin' # As good as any other, see: https://github.com/actions/setup-java#supported-distributions
+          distribution: 'temurin'
           java-package: 'jdk'
           java-version: '17'
-          gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
-          gpg-passphrase: GPG_PASSPHRASE
+          cache: 'gradle'
 
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
 
+      - name: Prepare GPG key
+        run: |
+          mkdir -p ~/.gnupg
+          echo "${{ secrets.GPG_PRIVATE_KEY }}" | base64 --decode > ~/.gnupg/private-key.gpg
+          gpg --batch --import ~/.gnupg/private-key.gpg
+          echo "GPG_TTY=$(tty)" >> $GITHUB_ENV
+
       - name: Publish to Maven Central
         run: ./gradlew publish --info
         env:
-          SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
-          SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
-          SIGNING_KEY_ID: ${{ secrets.SIGNING_KEY_ID }}
-          SIGNING_SECRET_KEY_RING_FILE: ${{ secrets.SIGNING_SECRET_KEY_RING_FILE }}
+          OSSRH_USERNAME : ${{ secrets.OSSRH_USERNAME  }}
+          OSSRH_PASSWORD : ${{ secrets.OSSRH_PASSWORD  }}
+          SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
           SIGNING_PASSWORD: ${{ secrets.SIGNING_PASSWORD }}
