--- a/build.gradle
+++ b/build.gradle
@@ -38,20 +38,16 @@ publishing {
             name = 'OSSRH'
             url = uri('https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/')
             credentials {
-                username project.findProperty('ossrhUsername')
-                password project.findProperty('ossrhPassword')
+                username project.findProperty('ossrhUsername') ?: System.getenv('OSSRH_USERNAME')
+                password project.findProperty('ossrhPassword') ?: System.getenv('OSSRH_PASSWORD')
             }
         }
     }
 }
 
 signing {
-    useInMemoryPgpKeys(findProperty("signing.keyId") ?: System.getenv('SIGNING_KEY_ID'),
-            findProperty("signing.secretKeyRingFile") ?: System.getenv('SIGNING_SECRET_KEY_RING_FILE'),
-            findProperty("signing.password") ?: System.getenv('SIGNING_PASSWORD'))
+    def signingKey = findProperty("signingKey") ?: System.getenv('SIGNING_KEY')
+    def signingPassword = findProperty("signingPassword") ?: System.getenv('OSSRH_PASSWORD')
+    useInMemoryPgpKeys(signingKey, signingPassword)
     sign publishing.publications.mavenJava
-}
-
-tasks.withType(Sign) {
-    enabled = !project.version.endsWith('SNAPSHOT')
 }
