--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,16 +18,14 @@ jobs:
           java-package: 'jdk'
           java-version: '17'
           cache: 'gradle'
-
+          server-id: 'ossrh'
+          server-username: OSSRH_USERNAME
+          server-password: OSSRH_PASSWORD
+          gpg-private-key: ${{ secrets.SIGNING_KEY }}
+          gpg-passphrase: SIGNING_PASSWORD
+          
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
-
-      - name: Prepare GPG key
-        run: |
-          mkdir -p ~/.gnupg
-          echo "${{ secrets.GPG_PRIVATE_KEY }}" | base64 --decode > ~/.gnupg/private-key.gpg
-          gpg --batch --import ~/.gnupg/private-key.gpg
-          echo "GPG_TTY=$(tty)" >> $GITHUB_ENV
 
       - name: Publish to Maven Central
         run: ./gradlew publish --info
