--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,9 +24,9 @@ jobs:
 
       - name: Import GPG Key
         run: |
-          echo "${{ secrets.SIGNING_KEY }}" | Out-File -Encoding utf8 "private-key.asc.base64"
-          Get-Content "private-key.asc.base64" | base64 -d | Out-File -Encoding utf8 "private-key.asc"
-          gpg --import --batch --yes "private-key.asc"
+          echo "${{ secrets.SIGNING_KEY }}" | base64 -d > private-key.asc
+          gpg --import --batch --yes private-key.asc
+
 
       - name: Publish to Maven Central
         run: ./gradlew publish --info
