--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ signing {
     def signingKey = findProperty("signingKey") ?: System.getenv('SIGNING_KEY')
     def signingPassword = findProperty("signingPassword") ?: System.getenv('SIGNING_PASSWORD')
     useInMemoryPgpKeys(signingKey, signingPassword)
-    sign publishing.publications.mavenJava
+    sign publishing.publications
 }
 
 publishing {
