--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,16 +22,11 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
 
-      - name: Import GPG Key
-        run: |
-          echo "${{ secrets.SIGNING_KEY }}" | base64 -d > private-key.asc
-          gpg --import --batch --yes private-key.asc
-
-
       - name: Publish to Maven Central
         run: ./gradlew publish --info
         env:
           OSSRH_USERNAME : ${{ secrets.OSSRH_USERNAME  }}
           OSSRH_PASSWORD : ${{ secrets.OSSRH_PASSWORD  }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
           SIGNING_PASSWORD: ${{ secrets.SIGNING_PASSWORD }}
